@@ -52,10 +52,11 @@ MainWidget::MainWidget(QWidget *parent)
   // Configuration
   //
 #ifdef MME
-  cnf=new Config(":/rdlibraryb-splashscreen.bmp",this);
+  cnf=new Config("rdlibraryb",":/rdlibraryb-splashscreen.bmp",this);
 #endif  // MME
 #ifdef ALSA
-  cnf=new Config("/usr/share/rivendell-producer/rdlibraryb-splashscreen.png",
+  cnf=new Config("rdlibraryb",
+		 "/usr/share/rivendell-producer/rdlibraryb-splashscreen.png",
 		 this);
 #endif  // ALSA
   cnf->load();
